<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context="com.advrtizr.weatherservice.ui.SettingsActivity">

    <RelativeLayout
        android:id="@+id/location_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/location_text_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_location_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/not_available" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/location_menu_button"
            style="@style/MenuArrow"
            android:src="@drawable/icon_arrow"/>
    </RelativeLayout>

    <View style="@style/ViewLineSeparator" />

    <RelativeLayout
        android:id="@+id/temp_unit_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/temp_unit_text_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temp_unit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_unit_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/temp_unit_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/not_available" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/unit_menu_button"
            style="@style/MenuArrow"
            android:src="@drawable/icon_arrow"/>
    </RelativeLayout>

    <View style="@style/ViewLineSeparator" />
</LinearLayout>