<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.advrtizr.weatherservice.ui.WeatherActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/weather_item_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="1dp">

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/location_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_conditions"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:transitionName="@string/transition_temperature"
                    android:adjustViewBounds="true"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:text="@string/not_available"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite"
                    android:textSize="65sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/tv_temperature"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_down" />

                    <TextView
                        android:id="@+id/tv_min_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:text="@string/not_available"
                        android:textAllCaps="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/ic_arrow_up" />

                    <TextView
                        android:id="@+id/tv_max_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="15dp"
                        android:text="@string/not_available"
                        android:textAllCaps="true"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/tv_temperature"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/tv_temperature"
                    android:text="@string/conditions"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/tv_condition"
                    android:layout_marginTop="15dp"
                    android:text="@string/location"
                    android:textColor="@color/colorWhite"
                    android:textSize="26sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/forecast_container"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content">
                <android.support.v7.widget.GridLayout
                    xmlns:grid="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/gl_forecast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    grid:orientation="horizontal"
                    grid:columnCount="7">
                </android.support.v7.widget.GridLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bottom_container"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/colorDarkGrayAlpha">

                <ImageView
                    android:id="@+id/ib_drag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_drag" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>